<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.beyowi.granpharma.GPSActivity">

    <TextView
        android:id="@+id/coordinates"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:text="@string/coordinates"/>
    <TextView
        android:id="@+id/latitude_text"
        android:layout_width="30dp"
        android:layout_height="20dp"
        android:text="@string/latitude"
        android:layout_toRightOf="@id/coordinates"/>

    <TextView
        android:id="@+id/latitude"
        android:layout_width="70dp"
        android:layout_height="20dp"
        android:layout_toRightOf="@id/latitude_text"/>

    <TextView
        android:id="@+id/longitude_text"
        android:layout_width="30dp"
        android:layout_height="20dp"
        android:text="@string/longitude"
        android:layout_toRightOf="@id/latitude"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:id="@+id/longitude"
        android:layout_width="70dp"
        android:layout_height="20dp"
        android:layout_toRightOf="@id/longitude_text"/>

    <Button
        android:id="@+id/data_local_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="20dp"
        android:layout_below="@id/coordinates"
        android:text="@string/data_coord"
        android:textSize="12dp"/>

    <Button
        android:id="@+id/gps_local_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_below="@id/coordinates"
        android:text="@string/gps_coord"
        android:textSize="12dp"/>

    <TextView
        android:id="@+id/closest_restaurant_text"
        android:layout_width="130dp"
        android:layout_height="20dp"
        android:layout_below="@id/data_local_button"
        android:layout_marginTop="20dp"
        android:text="@string/closest_rest"/>

    <TextView
        android:id="@+id/closest_restaurant"
        android:layout_width="200dp"
        android:layout_height="20dp"
        android:layout_alignBottom="@id/closest_restaurant_text"
        android:layout_toRightOf="@id/closest_restaurant_text"/>

    <Button
        android:id="@+id/position_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@id/closest_restaurant_text"
        android:layout_marginTop="20dp"
        android:layout_alignParentLeft="true"
        android:text="@string/pick_position"/>

    <Button
        android:id="@+id/address_button"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_below="@id/closest_restaurant_text"
        android:layout_marginTop="20dp"
        android:layout_alignParentRight="true"
        android:text="@string/pick_address"/>

    <fragment
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentBottom="true"
        android:name="com.google.android.gms.maps.MapFragment"/>

</RelativeLayout>